--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "^1.11.0",
     "morgan": "^1.8.2",
     "mysql": "^2.13.0",
+    "nodejs-websocket": "^1.7.1",
     "serve-favicon": "^2.4.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
